--- a/config.py.example
+++ b/config.py.example
@@ -1,14 +1,14 @@
 """Configuration."""
-TOKEN = str
-PREFIX = str  # example '.'
-DB_NAME = str  # example 'bot.db'
-QDAY_CHANNEL_ID = int
-CH_BUMP = int
-ROLE_BUMP = int
-VOICE_TRIGGER = [int, int]
-VK_API_TOKEN = str
-VK_API_VERSION = float
-VK_DOMAIN = str
-VK_GROUP_ID = int
-VK_DATA_FILE = str  # example './data/vk_last_post.json'
-CH_VK_POSTS = int
+TOKEN: str = ''
+PREFIX: str = '.'
+DB_NAME: str = 'bot.db'
+QDAY_CHANNEL_ID: int = 0
+CH_BUMP: int = 0
+ROLE_BUMP: int = 0
+VOICE_TRIGGER: list = [0, 0]
+VK_API_TOKEN: str = ''
+VK_API_VERSION: float = 0
+VK_DOMAIN: str = ''
+VK_GROUP_ID: int = 0
+VK_DATA_FILE: str = './data/vk_last_post.json'
+CH_VK_POSTS: int = 0
