--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
-# при выполнении на локальном пк удалить из названия файла "example" (оставить только ".env")
-TOKEN=ВАШ ТОКЕН БОТА
-VOICE_TRIGGER=ID ГОЛОСОВЫХ КАНАЛОВ БЕЗ ПРОБЕЛОВ ЧЕРЕЗ ЗАПЯТУЮ
+# Для запуска на локальном хостинге, скопируйте файл и назовите его ".env"
+TOKEN=ваш токен бота
+VOICE_TRIGGER=ID голосовых каналов, например: 1,2,3
