подключение и работа с firebase

--- a/example.env
+++ b/example.env
@@ -1,3 +1,5 @@
 # Для запуска на локальном хостинге, скопируйте файл и назовите его ".env"
 TOKEN=ваш токен бота
 VOICE_TRIGGER=ID голосовых каналов, например: 1,2,3
+FIREBASE_CERTIFICATE=
+DB_URL=
