--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 # Для запуска на локальном хостинге, скопируйте файл и назовите его ".env"
 TOKEN=ваш токен бота
 VOICE_TRIGGER=ID голосовых каналов, например: 1,2,3
-FIREBASE_CERTIFICATE=
-DB_URL=
+FIREBASE_CERTIFICATE=сертифакт для авторизации из Firebase Console (Project Overview > Project settings > Service accounts > Generate new private key) в одну строку
+DB_URL=realtime database url
