--- a/example.env
+++ b/example.env
@@ -1,5 +1,7 @@
 # Для запуска на локальном хостинге, скопируйте файл и назовите его ".env"
+DB_URL=realtime database url
+FIREBASE_CERTIFICATE=сертифакт для авторизации Firebase Console (Project Overview > Project settings > Service accounts > Generate new private key) в одну строку
+GSPREAD_CREDENTIALS=сертификат авторизации в Google Sheets
+SHEET_UID=ID гугл-таблицы
 TOKEN=ваш токен бота
 VOICE_TRIGGER=ID голосовых каналов, например: 1,2,3
-FIREBASE_CERTIFICATE=сертифакт для авторизации Firebase Console (Project Overview > Project settings > Service accounts > Generate new private key) в одну строку
-DB_URL=realtime database url
